data/manifests/artifacthub/bitnami/wordpress/011_service_release-name-mariadb-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mariadb-headless
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/version: 12.0.2
    helm.sh/chart: mariadb-22.0.2
    app.kubernetes.io/part-of: mariadb
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: mysql
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: mariadb
